# utilities

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Git_and_software_development.md  README.md  index.rst  pyproject.toml  requirements.txt  setup.py  utilities.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: development.yml  docker.yml  docker_landseg.yml  documentation.yml  master.yml  python-app.yml  stable_push.yml  staging.yml  static.yml
docs/: conf.py  index.rst  modules.rst  tests.rst  utilities.image_cutting.rst  utilities.image_loading.rst  utilities.rst  utilities.segmentation_utils.ImagePreprocessor.rst  utilities.segmentation_utils.flowreader.rst  utilities.segmentation_utils.rst
docs/custom_modules/: auto_toctree.py
docs/style/: custom.css
image_files/land-seg/: Dockerfile
image_files/software-base/: Dockerfile
tests/: README.md  mock_classes.py
tests/segmentation_utils_tests.py/: flow_reader_test.py  image_encoder_test.py  image_preprocessor_test.py  test_flowreader.py  test_strategies.py
tests/transform_utils_test.py/: image_cutting_test.py
utilities/: __init__.py  image_cutting.py  image_loading.py
utilities/backends/: __init__.py
utilities/backends/common/: somefile.py
utilities/backends/tf/: __init__.py  somefile.py
utilities/backends/torch/: __init__.py  somefile.py
utilities/dataset_utils/: optimizer.py
utilities/segmentation_utils/: ImagePreprocessor.py  constants.py  flowreader.py  image_encoder.py  reading_strategies.py  tempCodeRunnerFile.py
utilities/transform_utils/: image_cutting.py  image_loading.py  image_stats.py
