[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities"
version = "0.1.0"
authors = [
    {name = "GU Orbit Software Team", email = "uog.orbit@gmail.com"}
]
requires-python = ">=3.10"
description = "A package containing utilities for GU Orbit Software"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy >= 1.24.0",
    "rasterio >= 1.3.6",
    "Pillow >= 9.4.0",
    "tensorflow >= 2.10",
]

[tool.setuptools]
packages = ["utilities"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.2",
    "pytest-cov >= 4.0.0",
    "twine >= 4.0.0"
]
